# suilend-capsule-cli

./: README.md  pyproject.toml
suilend_capsule_cli/: addresses.json  main.py  sui.py
