[tool.poetry]
name = "suilend-capsule-cli"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysui = "^0.66.0"
typer = "^0.12.3"

[tool.poetry.scripts]
capsule = "suilend_capsule_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
